# phoenix-db

./: Cargo.toml  LICENSE  README.md
crates/: Cargo.toml  rust-toolchain.toml
crates/phoenix/: Cargo.toml
crates/phoenix-common/: Cargo.toml
crates/phoenix-common/src/: lib.rs
crates/phoenix-server/: Cargo.toml
crates/phoenix-server/src/: lib.rs
crates/phoenix/src/: main.rs
docs/: index.md
src/: cli.rs  main.rs  protocol.rs  server.rs  tcp.rs
src/commands/: delete.rs  insert.rs  lookup.rs  mod.rs
src/net/: mod.rs  ttl.rs
src/services/: mod.rs  tcp.rs  ttl.rs
test/: basic_test.py  simple.py
