[package]
name = "phoenix-db"
description = "Phoenix Database Server"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ThatGuyJamal/phoenix-db"
documentation = "https://docs.rs/phoenix-db"
publish = false

authors = ["CodingWithJamal <codingwithjamal@outlook.com>"]
readme = "README.md"
license = "MIT"
include = ["Cargo.toml", "LICENSE", "README.md", "src/"]
categories = ["database", "caching"]

[dependencies]
bincode = { version = "=2.0.0-rc.3", features = ["serde"] }
futures = "0.3.30"
once_cell = "1.19.0"
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
