[package]
name = "phoenix-db"
description = "Phoenix Database Server"
version = "0.0.4"
edition = "2021"
repository = "https://github.com/ThatGuyJamal/phoenix-db"
documentation = "https://docs.rs/phoenix-db"
publish = false

authors = ["CodingWithJamal <codingwithjamal@outlook.com>"]
readme = "README.md"
license = "MIT"
include = ["Cargo.toml", "LICENSE", "README.md", "src/"]
categories = ["database", "caching"]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
futures = "0.3.30"
once_cell = "1.19.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
