[workspace]
resolver = "2"

members = [
    "phoenix",
    "phoenix-common",
    "phoenix-server",
    # "phoenix-derive",
]

[workspace.dependencies]
tokio = { version = "1.39.3", features = ["full"] }

[profile.dev]
opt-level = 1   # Make debug builds run faster
panic = "abort" # This leads to better optimizations and smaller binaries.

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2

[profile.release]
# debug = true # good for profilers
panic = "abort" # This leads to better optimizations and smaller binaries.
